bison_Program.output
Terminals unused in grammar

    TOKEN_LBRACKET
    TOKEN_RBRACKET
    TOKEN_MODULO
    TOKEN_HASH
    TOKEN_AT
    TOKEN_CARET
    TOKEN_QUESTION_MARK
    TOKEN_SINGLE_QUOTE
    TOKEN_DOUBLE_QUOTE
    TOKEN_UNDERSCORE
    TOKEN_EXCLAMATION_POINT
    TOKEN_PIPE
    TOKEN_ADD
    TOKEN_SUB
    TOKEN_MUL
    UMINUS


Rules useless in parser due to conflicts

    3 STATEMENTS: STATEMENT


State 23 conflicts: 3 reduce/reduce
State 73 conflicts: 1 shift/reduce
State 187 conflicts: 19 shift/reduce, 1 reduce/reduce
State 194 conflicts: 2 shift/reduce
State 204 conflicts: 19 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TOKEN_START STATEMENTS TOKEN_END

    2 STATEMENTS: ε
    3           | STATEMENT
    4           | STATEMENT STATEMENTS

    5 STATEMENT: STATEMENT_IF
    6          | STATEMENT_WHILE
    7          | STATEMENT_ASSIGN
    8          | STATEMENT_SWITCH
    9          | STATEMENT_RETURN
   10          | STATEMENT_CLASS
   11          | VARIABLE_DECLARATION
   12          | METHOD_DECLARATION
   13          | STATEMENT_DO_WHILE
   14          | STATEMENT_FOR
   15          | STATEMENT_PRINT
   16          | CREATE_CLASS_OBJECT
   17          | STATEMENT_BREAK
   18          | COMMENTS

   19 STATEMENT_IF: TOKEN_IF TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   20             | TOKEN_IF TOKEN_LPAREN CONDITION TOKEN_RPAREN STATEMENTS STATEMENT_ELSE_IF TOKEN_ELSE TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

   21 STATEMENT_ELSE_IF: TOKEN_ELSE_IF TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   22                  | TOKEN_ELSE_IF TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE STATEMENT_ELSE_IF

   23 STATEMENT_WHILE: TOKEN_WHILE TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

   24 STATEMENT_BREAK: TOKEN_BREAK TOKEN_SEMICOLON

   25 STATEMENT_ASSIGN: IDENTIFIER TOKEN_ASSIGN EXPRESSION TOKEN_SEMICOLON
   26                 | ACCESS_TO_CLASS_MEMBERS TOKEN_ASSIGN EXPRESSION TOKEN_SEMICOLON

   27 STATEMENT_SWITCH: TOKEN_SWITCH TOKEN_LPAREN EXPRESSION TOKEN_RPAREN SWITCH_BODY

   28 SWITCH_BODY: TOKEN_CASE EXPRESSION TOKEN_COLON STATEMENT
   29            | TOKEN_CASE EXPRESSION TOKEN_COLON STATEMENT TOKEN_DEFAULT TOKEN_COLON STATEMENT
   30            | TOKEN_CASE EXPRESSION TOKEN_COLON STATEMENT SWITCH_BODY

   31 STATEMENT_RETURN: TOKEN_RETURN EXPRESSION TOKEN_SEMICOLON

   32 STATEMENT_CLASS: ACCESS_MODIFIER TOKEN_CLASS CLASS_IDENTIFIER TOKEN_LBRACE VARIABLE_DECLARATION METHOD_DECLARATION TOKEN_RBRACE

   33 CREATE_CLASS_OBJECT: CLASS_IDENTIFIER IDENTIFIER TOKEN_ASSIGN TOKEN_NEW CLASS_IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_SEMICOLON

   34 STATEMENT_DO_WHILE: TOKEN_DO TOKEN_LBRACE STATEMENTS TOKEN_RBRACE TOKEN_WHILE TOKEN_LPAREN CONDITION TOKEN_RPAREN

   35 ACCESS_TO_CLASS_MEMBERS: IDENTIFIER TOKEN_DOT IDENTIFIER

   36 STATEMENT_FOR: TOKEN_FOR TOKEN_LPAREN STATEMENT_ASSIGN TOKEN_SEMICOLON CONDITION TOKEN_SEMICOLON STATEMENT_ASSIGN TOKEN_RPAREN TOKEN_LBRACE TOKEN_RBRACE

   37 COMMENTS: TOKEN_ONE_LINE_COMMENT
   38         | TOKEN_MULTIPLE_LINE_COMMENTS

   39 STATEMENT_PRINT: TOKEN_OUT_PRINT TOKEN_LPAREN STRING_LITERAL TOKEN_RPAREN TOKEN_SEMICOLON
   40                | TOKEN_OUT_PRINT TOKEN_LPAREN STRING_LITERAL PRINT_OPTIONAL_VAR TOKEN_RPAREN TOKEN_SEMICOLON

   41 PRINT_OPTIONAL_VAR: TOKEN_COMMA EXPRESSION
   42                   | TOKEN_COMMA EXPRESSION PRINT_OPTIONAL_VAR

   43 VARIABLE_DECLARATION: ACCESS_MODIFIER VARIABLE_TYPE IDENTIFIER TOKEN_SEMICOLON
   44                     | VARIABLE_TYPE IDENTIFIER TOKEN_SEMICOLON

   45 METHOD_DECLARATION: ACCESS_MODIFIER RETURN_TYPE IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   46                   | ACCESS_MODIFIER RETURN_TYPE IDENTIFIER TOKEN_LPAREN PARAMETER_LIST TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   47                   | ACCESS_MODIFIER RETURN_TYPE IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_LBRACE VARIABLE_DECLARATION STATEMENTS TOKEN_RBRACE
   48                   | ACCESS_MODIFIER RETURN_TYPE IDENTIFIER TOKEN_LPAREN PARAMETER_LIST TOKEN_RPAREN TOKEN_LBRACE VARIABLE_DECLARATION STATEMENTS TOKEN_RBRACE

   49 RETURN_TYPE: VARIABLE_TYPE
   50            | TOKEN_VOID

   51 ACCESS_MODIFIER: TOKEN_PUBLIC
   52                | TOKEN_PRIVATE

   53 VARIABLE_TYPE: TOKEN_INT
   54              | TOKEN_CHAR
   55              | TOKEN_DOUBLE
   56              | TOKEN_BOOLEAN
   57              | TOKEN_STRING

   58 PARAMETER_LIST: VARIABLE_TYPE IDENTIFIER TOKEN_COMMA PARAMETER_LIST
   59               | VARIABLE_TYPE IDENTIFIER

   60 CONDITION: EXPRESSION COMPARISON EXPRESSION
   61          | EXPRESSION COMPARISON EXPRESSION TOKEN_AND CONDITION
   62          | EXPRESSION COMPARISON EXPRESSION TOKEN_OR CONDITION

   63 COMPARISON: TOKEN_LESS_THAN
   64           | TOKEN_GREATER_THAN
   65           | TOKEN_LESS_THAN_EQUAL
   66           | TOKEN_GREATER_THAN_EQUAL
   67           | TOKEN_EQUAL
   68           | TOKEN_NOT_EQUAL

   69 EXPRESSION: VALUE
   70           | OPERATION
   71           | STATEMENT_NEW
   72           | BOOLEAN
   73           | STRING_LITERAL

   74 BOOLEAN: TOKEN_TRUE
   75        | TOKEN_FALSE

   76 STATEMENT_NEW: TOKEN_NEW VARIABLE_TYPE
   77              | TOKEN_NEW CLASS_IDENTIFIER

   78 VALUE: NUMBER
   79      | IDENTIFIER

   80 OPERATION: ADDITION
   81          | MULTIPLICATION
   82          | SUBTRACTION
   83          | DIVISION

   84 OPERATION_CONTINUE: ε
   85                   | TOKEN_PLUS TOKEN_LPAREN OPERATION TOKEN_RPAREN
   86                   | TOKEN_MINUS TOKEN_LPAREN OPERATION TOKEN_RPAREN
   87                   | TOKEN_MULT TOKEN_LPAREN OPERATION TOKEN_RPAREN
   88                   | TOKEN_DIV TOKEN_LPAREN OPERATION TOKEN_RPAREN

   89 ADDITION: VALUE TOKEN_PLUS VALUE OPERATION_CONTINUE

   90 MULTIPLICATION: VALUE TOKEN_MULT VALUE OPERATION_CONTINUE

   91 SUBTRACTION: VALUE TOKEN_MINUS VALUE OPERATION_CONTINUE

   92 DIVISION: VALUE TOKEN_DIV VALUE OPERATION_CONTINUE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_IF <strvalue> (258) 19 20
    TOKEN_ELSE <strvalue> (259) 20
    TOKEN_ELSE_IF <strvalue> (260) 21 22
    TOKEN_WHILE <strvalue> (261) 23 34
    TOKEN_DO <strvalue> (262) 34
    TOKEN_FOR <strvalue> (263) 36
    TOKEN_SWITCH <strvalue> (264) 27
    TOKEN_CASE <strvalue> (265) 28 29 30
    TOKEN_DEFAULT <strvalue> (266) 29
    TOKEN_BREAK <strvalue> (267) 24
    TOKEN_RETURN <strvalue> (268) 31
    TOKEN_CLASS <strvalue> (269) 32
    TOKEN_PUBLIC <strvalue> (270) 51
    TOKEN_PRIVATE <strvalue> (271) 52
    TOKEN_INT <strvalue> (272) 53
    TOKEN_CHAR <strvalue> (273) 54
    TOKEN_DOUBLE <strvalue> (274) 55
    TOKEN_BOOLEAN <strvalue> (275) 56
    TOKEN_STRING <strvalue> (276) 57
    TOKEN_TRUE <strvalue> (277) 74
    TOKEN_FALSE <strvalue> (278) 75
    TOKEN_NEW <strvalue> (279) 33 76 77
    TOKEN_OUT_PRINT <strvalue> (280) 39 40
    TOKEN_SEMICOLON <strvalue> (281) 24 25 26 31 33 36 39 40 43 44
    TOKEN_LBRACE <strvalue> (282) 19 20 21 22 23 32 34 36 45 46 47 48
    TOKEN_RBRACE <strvalue> (283) 19 20 21 22 23 32 34 36 45 46 47 48
    TOKEN_LPAREN <strvalue> (284) 19 20 21 22 23 27 33 34 36 39 40 45 46 47 48 85 86 87 88
    TOKEN_RPAREN <strvalue> (285) 19 20 21 22 23 27 33 34 36 39 40 45 46 47 48 85 86 87 88
    TOKEN_LBRACKET <strvalue> (286)
    TOKEN_RBRACKET <strvalue> (287)
    TOKEN_ASSIGN <strvalue> (288) 25 26 33
    TOKEN_COMMA <strvalue> (289) 41 42 58
    TOKEN_PLUS <strvalue> (290) 85 89
    TOKEN_MINUS <strvalue> (291) 86 91
    TOKEN_MULT <strvalue> (292) 87 90
    TOKEN_DIV <strvalue> (293) 88 92
    TOKEN_LESS_THAN <strvalue> (294) 63
    TOKEN_GREATER_THAN <strvalue> (295) 64
    TOKEN_EQUAL <strvalue> (296) 67
    TOKEN_NOT_EQUAL <strvalue> (297) 68
    TOKEN_LESS_THAN_EQUAL <strvalue> (298) 65
    TOKEN_GREATER_THAN_EQUAL <strvalue> (299) 66
    TOKEN_AND <strvalue> (300) 61
    TOKEN_OR <strvalue> (301) 62
    TOKEN_MODULO <strvalue> (302)
    TOKEN_HASH <strvalue> (303)
    TOKEN_AT <strvalue> (304)
    TOKEN_CARET <strvalue> (305)
    TOKEN_QUESTION_MARK <strvalue> (306)
    TOKEN_SINGLE_QUOTE <strvalue> (307)
    TOKEN_DOUBLE_QUOTE <strvalue> (308)
    TOKEN_UNDERSCORE <strvalue> (309)
    TOKEN_DOT <strvalue> (310) 35
    TOKEN_EXCLAMATION_POINT <strvalue> (311)
    TOKEN_PIPE <strvalue> (312)
    STRING_LITERAL <strvalue> (313) 39 40 73
    TOKEN_ONE_LINE_COMMENT <strvalue> (314) 37
    TOKEN_MULTIPLE_LINE_COMMENTS <strvalue> (315) 38
    TOKEN_ADD <strvalue> (316)
    TOKEN_START <strvalue> (317) 1
    TOKEN_END <strvalue> (318) 1
    TOKEN_COLON <strvalue> (319) 28 29 30
    TOKEN_VOID <strvalue> (320) 50
    TOKEN_SUB (321)
    TOKEN_MUL (322)
    UMINUS (323)
    NUMBER <intvalue> (324) 78
    IDENTIFIER <strvalue> (325) 25 33 35 43 44 45 46 47 48 58 59 79
    CLASS_IDENTIFIER <strvalue> (326) 32 33 77


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    PROGRAM <strvalue> (73)
        on left: 1
        on right: 0
    STATEMENTS <strvalue> (74)
        on left: 2 3 4
        on right: 1 4 19 20 21 22 23 34 45 46 47 48
    STATEMENT <strvalue> (75)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 3 4 28 29 30
    STATEMENT_IF <strvalue> (76)
        on left: 19 20
        on right: 5
    STATEMENT_ELSE_IF <strvalue> (77)
        on left: 21 22
        on right: 20 22
    STATEMENT_WHILE <strvalue> (78)
        on left: 23
        on right: 6
    STATEMENT_BREAK <strvalue> (79)
        on left: 24
        on right: 17
    STATEMENT_ASSIGN <strvalue> (80)
        on left: 25 26
        on right: 7 36
    STATEMENT_SWITCH <strvalue> (81)
        on left: 27
        on right: 8
    SWITCH_BODY <strvalue> (82)
        on left: 28 29 30
        on right: 27 30
    STATEMENT_RETURN <strvalue> (83)
        on left: 31
        on right: 9
    STATEMENT_CLASS <strvalue> (84)
        on left: 32
        on right: 10
    CREATE_CLASS_OBJECT <strvalue> (85)
        on left: 33
        on right: 16
    STATEMENT_DO_WHILE <strvalue> (86)
        on left: 34
        on right: 13
    ACCESS_TO_CLASS_MEMBERS <strvalue> (87)
        on left: 35
        on right: 26
    STATEMENT_FOR <strvalue> (88)
        on left: 36
        on right: 14
    COMMENTS <strvalue> (89)
        on left: 37 38
        on right: 18
    STATEMENT_PRINT <strvalue> (90)
        on left: 39 40
        on right: 15
    PRINT_OPTIONAL_VAR <strvalue> (91)
        on left: 41 42
        on right: 40 42
    VARIABLE_DECLARATION <strvalue> (92)
        on left: 43 44
        on right: 11 32 47 48
    METHOD_DECLARATION <strvalue> (93)
        on left: 45 46 47 48
        on right: 12 32
    RETURN_TYPE <strvalue> (94)
        on left: 49 50
        on right: 45 46 47 48
    ACCESS_MODIFIER <strvalue> (95)
        on left: 51 52
        on right: 32 43 45 46 47 48
    VARIABLE_TYPE <strvalue> (96)
        on left: 53 54 55 56 57
        on right: 43 44 49 58 59 76
    PARAMETER_LIST <strvalue> (97)
        on left: 58 59
        on right: 46 48 58
    CONDITION <strvalue> (98)
        on left: 60 61 62
        on right: 19 20 21 22 23 34 36 61 62
    COMPARISON <strvalue> (99)
        on left: 63 64 65 66 67 68
        on right: 60 61 62
    EXPRESSION <strvalue> (100)
        on left: 69 70 71 72 73
        on right: 25 26 27 28 29 30 31 41 42 60 61 62
    BOOLEAN <strvalue> (101)
        on left: 74 75
        on right: 72
    STATEMENT_NEW <strvalue> (102)
        on left: 76 77
        on right: 71
    VALUE <strvalue> (103)
        on left: 78 79
        on right: 69 89 90 91 92
    OPERATION <strvalue> (104)
        on left: 80 81 82 83
        on right: 70 85 86 87 88
    OPERATION_CONTINUE <strvalue> (105)
        on left: 84 85 86 87 88
        on right: 89 90 91 92
    ADDITION <strvalue> (106)
        on left: 89
        on right: 80
    MULTIPLICATION <strvalue> (107)
        on left: 90
        on right: 81
    SUBTRACTION <strvalue> (108)
        on left: 91
        on right: 82
    DIVISION <strvalue> (109)
        on left: 92
        on right: 83


State 0

    0 $accept: • PROGRAM $end

    TOKEN_START  shift, and go to state 1

    PROGRAM  go to state 2


State 1

    1 PROGRAM: TOKEN_START • STATEMENTS TOKEN_END

    TOKEN_IF                      shift, and go to state 3
    TOKEN_WHILE                   shift, and go to state 4
    TOKEN_DO                      shift, and go to state 5
    TOKEN_FOR                     shift, and go to state 6
    TOKEN_SWITCH                  shift, and go to state 7
    TOKEN_BREAK                   shift, and go to state 8
    TOKEN_RETURN                  shift, and go to state 9
    TOKEN_PUBLIC                  shift, and go to state 10
    TOKEN_PRIVATE                 shift, and go to state 11
    TOKEN_INT                     shift, and go to state 12
    TOKEN_CHAR                    shift, and go to state 13
    TOKEN_DOUBLE                  shift, and go to state 14
    TOKEN_BOOLEAN                 shift, and go to state 15
    TOKEN_STRING                  shift, and go to state 16
    TOKEN_OUT_PRINT               shift, and go to state 17
    TOKEN_ONE_LINE_COMMENT        shift, and go to state 18
    TOKEN_MULTIPLE_LINE_COMMENTS  shift, and go to state 19
    IDENTIFIER                    shift, and go to state 20
    CLASS_IDENTIFIER              shift, and go to state 21

    $default  reduce using rule 2 (STATEMENTS)

    STATEMENTS               go to state 22
    STATEMENT                go to state 23
    STATEMENT_IF             go to state 24
    STATEMENT_WHILE          go to state 25
    STATEMENT_BREAK          go to state 26
    STATEMENT_ASSIGN         go to state 27
    STATEMENT_SWITCH         go to state 28
    STATEMENT_RETURN         go to state 29
    STATEMENT_CLASS          go to state 30
    CREATE_CLASS_OBJECT      go to state 31
    STATEMENT_DO_WHILE       go to state 32
    ACCESS_TO_CLASS_MEMBERS  go to state 33
    STATEMENT_FOR            go to state 34
    COMMENTS                 go to state 35
    STATEMENT_PRINT          go to state 36
    VARIABLE_DECLARATION     go to state 37
    METHOD_DECLARATION       go to state 38
    ACCESS_MODIFIER          go to state 39
    VARIABLE_TYPE            go to state 40


State 2

    0 $accept: PROGRAM • $end

    $end  shift, and go to state 41


State 3

   19 STATEMENT_IF: TOKEN_IF • TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   20             | TOKEN_IF • TOKEN_LPAREN CONDITION TOKEN_RPAREN STATEMENTS STATEMENT_ELSE_IF TOKEN_ELSE TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

    TOKEN_LPAREN  shift, and go to state 42


State 4

   23 STATEMENT_WHILE: TOKEN_WHILE • TOKEN_LPAREN CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

    TOKEN_LPAREN  shift, and go to state 43


State 5

   34 STATEMENT_DO_WHILE: TOKEN_DO • TOKEN_LBRACE STATEMENTS TOKEN_RBRACE TOKEN_WHILE TOKEN_LPAREN CONDITION TOKEN_RPAREN

    TOKEN_LBRACE  shift, and go to state 44


State 6

   36 STATEMENT_FOR: TOKEN_FOR • TOKEN_LPAREN STATEMENT_ASSIGN TOKEN_SEMICOLON CONDITION TOKEN_SEMICOLON STATEMENT_ASSIGN TOKEN_RPAREN TOKEN_LBRACE TOKEN_RBRACE

    TOKEN_LPAREN  shift, and go to state 45


State 7

   27 STATEMENT_SWITCH: TOKEN_SWITCH • TOKEN_LPAREN EXPRESSION TOKEN_RPAREN SWITCH_BODY

    TOKEN_LPAREN  shift, and go to state 46


State 8

   24 STATEMENT_BREAK: TOKEN_BREAK • TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 47


State 9

   31 STATEMENT_RETURN: TOKEN_RETURN • EXPRESSION TOKEN_SEMICOLON

    TOKEN_TRUE      shift, and go to state 48
    TOKEN_FALSE     shift, and go to state 49
    TOKEN_NEW       shift, and go to state 50
    STRING_LITERAL  shift, and go to state 51
    NUMBER          shift, and go to state 52
    IDENTIFIER      shift, and go to state 53

    EXPRESSION      go to state 54
    BOOLEAN         go to state 55
    STATEMENT_NEW   go to state 56
    VALUE           go to state 57
    OPERATION       go to state 58
    ADDITION        go to state 59
    MULTIPLICATION  go to state 60
    SUBTRACTION     go to state 61
    DIVISION        go to state 62


State 10

   51 ACCESS_MODIFIER: TOKEN_PUBLIC •

    $default  reduce using rule 51 (ACCESS_MODIFIER)


State 11

   52 ACCESS_MODIFIER: TOKEN_PRIVATE •

    $default  reduce using rule 52 (ACCESS_MODIFIER)


State 12

   53 VARIABLE_TYPE: TOKEN_INT •

    $default  reduce using rule 53 (VARIABLE_TYPE)


State 13

   54 VARIABLE_TYPE: TOKEN_CHAR •

    $default  reduce using rule 54 (VARIABLE_TYPE)


State 14

   55 VARIABLE_TYPE: TOKEN_DOUBLE •

    $default  reduce using rule 55 (VARIABLE_TYPE)


State 15

   56 VARIABLE_TYPE: TOKEN_BOOLEAN •

    $default  reduce using rule 56 (VARIABLE_TYPE)


State 16

   57 VARIABLE_TYPE: TOKEN_STRING •

    $default  reduce using rule 57 (VARIABLE_TYPE)


State 17

   39 STATEMENT_PRINT: TOKEN_OUT_PRINT • TOKEN_LPAREN STRING_LITERAL TOKEN_RPAREN TOKEN_SEMICOLON
   40                | TOKEN_OUT_PRINT • TOKEN_LPAREN STRING_LITERAL PRINT_OPTIONAL_VAR TOKEN_RPAREN TOKEN_SEMICOLON

    TOKEN_LPAREN  shift, and go to state 63


State 18

   37 COMMENTS: TOKEN_ONE_LINE_COMMENT •

    $default  reduce using rule 37 (COMMENTS)


State 19

   38 COMMENTS: TOKEN_MULTIPLE_LINE_COMMENTS •

    $default  reduce using rule 38 (COMMENTS)


State 20

   25 STATEMENT_ASSIGN: IDENTIFIER • TOKEN_ASSIGN EXPRESSION TOKEN_SEMICOLON
   35 ACCESS_TO_CLASS_MEMBERS: IDENTIFIER • TOKEN_DOT IDENTIFIER

    TOKEN_ASSIGN  shift, and go to state 64
    TOKEN_DOT     shift, and go to state 65


State 21

   33 CREATE_CLASS_OBJECT: CLASS_IDENTIFIER • IDENTIFIER TOKEN_ASSIGN TOKEN_NEW CLASS_IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_SEMICOLON

    IDENTIFIER  shift, and go to state 66


State 22

    1 PROGRAM: TOKEN_START STATEMENTS • TOKEN_END

    TOKEN_END  shift, and go to state 67


State 23

    3 STATEMENTS: STATEMENT •
    4           | STATEMENT • STATEMENTS

    TOKEN_IF                      shift, and go to state 3
    TOKEN_WHILE                   shift, and go to state 4
    TOKEN_DO                      shift, and go to state 5
    TOKEN_FOR                     shift, and go to state 6
    TOKEN_SWITCH                  shift, and go to state 7
    TOKEN_BREAK                   shift, and go to state 8
    TOKEN_RETURN                  shift, and go to state 9
    TOKEN_PUBLIC                  shift, and go to state 10
    TOKEN_PRIVATE                 shift, and go to state 11
    TOKEN_INT                     shift, and go to state 12
    TOKEN_CHAR                    shift, and go to state 13
    TOKEN_DOUBLE                  shift, and go to state 14
    TOKEN_BOOLEAN                 shift, and go to state 15
    TOKEN_STRING                  shift, and go to state 16
    TOKEN_OUT_PRINT               shift, and go to state 17
    TOKEN_ONE_LINE_COMMENT        shift, and go to state 18
    TOKEN_MULTIPLE_LINE_COMMENTS  shift, and go to state 19
    IDENTIFIER                    shift, and go to state 20
    CLASS_IDENTIFIER              shift, and go to state 21

    TOKEN_ELSE_IF  reduce using rule 2 (STATEMENTS)
    TOKEN_ELSE_IF  [reduce using rule 3 (STATEMENTS)]
    TOKEN_RBRACE   reduce using rule 2 (STATEMENTS)
    TOKEN_RBRACE   [reduce using rule 3 (STATEMENTS)]
    TOKEN_END      reduce using rule 2 (STATEMENTS)
    TOKEN_END      [reduce using rule 3 (STATEMENTS)]
    $default       reduce using rule 2 (STATEMENTS)

    STATEMENTS               go to state 68
    STATEMENT                go to state 23
    STATEMENT_IF             go to state 24
    STATEMENT_WHILE          go to state 25
    STATEMENT_BREAK          go to state 26
    STATEMENT_ASSIGN         go to state 27
    STATEMENT_SWITCH         go to state 28
    STATEMENT_RETURN         go to state 29
    STATEMENT_CLASS          go to state 30
    CREATE_CLASS_OBJECT      go to state 31
    STATEMENT_DO_WHILE       go to state 32
    ACCESS_TO_CLASS_MEMBERS  go to state 33
    STATEMENT_FOR            go to state 34
    COMMENTS                 go to state 35
    STATEMENT_PRINT          go to state 36
    VARIABLE_DECLARATION     go to state 37
    METHOD_DECLARATION       go to state 38
    ACCESS_MODIFIER          go to state 39
    VARIABLE_TYPE            go to state 40


State 24

    5 STATEMENT: STATEMENT_IF •

    $default  reduce using rule 5 (STATEMENT)


State 25

    6 STATEMENT: STATEMENT_WHILE •

    $default  reduce using rule 6 (STATEMENT)


State 26

   17 STATEMENT: STATEMENT_BREAK •

    $default  reduce using rule 17 (STATEMENT)


State 27

    7 STATEMENT: STATEMENT_ASSIGN •

    $default  reduce using rule 7 (STATEMENT)


State 28

    8 STATEMENT: STATEMENT_SWITCH •

    $default  reduce using rule 8 (STATEMENT)


State 29

    9 STATEMENT: STATEMENT_RETURN •

    $default  reduce using rule 9 (STATEMENT)


State 30

   10 STATEMENT: STATEMENT_CLASS •

    $default  reduce using rule 10 (STATEMENT)


State 31

   16 STATEMENT: CREATE_CLASS_OBJECT •

    $default  reduce using rule 16 (STATEMENT)


State 32

   13 STATEMENT: STATEMENT_DO_WHILE •

    $default  reduce using rule 13 (STATEMENT)


State 33

   26 STATEMENT_ASSIGN: ACCESS_TO_CLASS_MEMBERS • TOKEN_ASSIGN EXPRESSION TOKEN_SEMICOLON

    TOKEN_ASSIGN  shift, and go to state 69


State 34

   14 STATEMENT: STATEMENT_FOR •

    $default  reduce using rule 14 (STATEMENT)


State 35

   18 STATEMENT: COMMENTS •

    $default  reduce using rule 18 (STATEMENT)


State 36

   15 STATEMENT: STATEMENT_PRINT •

    $default  reduce using rule 15 (STATEMENT)


State 37

   11 STATEMENT: VARIABLE_DECLARATION •

    $default  reduce using rule 11 (STATEMENT)


State 38

   12 STATEMENT: METHOD_DECLARATION •

    $default  reduce using rule 12 (STATEMENT)


State 39

   32 STATEMENT_CLASS: ACCESS_MODIFIER • TOKEN_CLASS CLASS_IDENTIFIER TOKEN_LBRACE VARIABLE_DECLARATION METHOD_DECLARATION TOKEN_RBRACE
   43 VARIABLE_DECLARATION: ACCESS_MODIFIER • VARIABLE_TYPE IDENTIFIER TOKEN_SEMICOLON
   45 METHOD_DECLARATION: ACCESS_MODIFIER • RETURN_TYPE IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   46                   | ACCESS_MODIFIER • RETURN_TYPE IDENTIFIER TOKEN_LPAREN PARAMETER_LIST TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   47                   | ACCESS_MODIFIER • RETURN_TYPE IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN TOKEN_LBRACE VARIABLE_DECLARATION STATEMENTS TOKEN_RBRACE
   48                   | ACCESS_MODIFIER • RETURN_TYPE IDENTIFIER TOKEN_LPAREN PARAMETER_LIST TOKEN_RPAREN TOKEN_LBRACE VARIABLE_DECLARATION STATEMENTS TOKEN_RBRACE

    TOKEN_CLASS    shift, and go to state 70
    TOKEN_INT      shift, and go to state 12
    TOKEN_CHAR     shift, and go to state 13
    TOKEN_DOUBLE   shift, and go to state 14
    TOKEN_BOOLEAN  shift, and go to state 15
    TOKEN_STRING   shift, and go to state 16
    TOKEN_VOID     shift, and go to state 71

    RETURN_TYPE    go to state 72
    VARIABLE_TYPE  go to state 73


State 40

   44 VARIABLE_DECLARATION: VARIABLE_TYPE • IDENTIFIER TOKEN_SEMICOLON

    IDENTIFIER  shift, and go to state 74


State 41

    0 $accept: PROGRAM $end •

    $default  accept


State 42

   19 STATEMENT_IF: TOKEN_IF TOKEN_LPAREN • CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE
   20             | TOKEN_IF TOKEN_LPAREN • CONDITION TOKEN_RPAREN STATEMENTS STATEMENT_ELSE_IF TOKEN_ELSE TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

    TOKEN_TRUE      shift, and go to state 48
    TOKEN_FALSE     shift, and go to state 49
    TOKEN_NEW       shift, and go to state 50
    STRING_LITERAL  shift, and go to state 51
    NUMBER          shift, and go to state 52
    IDENTIFIER      shift, and go to state 53

    CONDITION       go to state 75
    EXPRESSION      go to state 76
    BOOLEAN         go to state 55
    STATEMENT_NEW   go to state 56
    VALUE           go to state 57
    OPERATION       go to state 58
    ADDITION        go to state 59
    MULTIPLICATION  go to state 60
    SUBTRACTION     go to state 61
    DIVISION        go to state 62


State 43

   23 STATEMENT_WHILE: TOKEN_WHILE TOKEN_LPAREN • CONDITION TOKEN_RPAREN TOKEN_LBRACE STATEMENTS TOKEN_RBRACE

    TOKEN_TRUE      shift, and go to state 48
    TOKEN_FALSE     shift, and go to state 49
    TOKEN_NEW       shift, and go to state 50
    STRING_LITERAL  shift, and go to state 51
    NUMBER          shift, and go to state 52
    IDENTIFIER      shift, and go to state 53

    CONDITION       go to state 77
    EXPRESSION      go to state 76
    BOOLEAN         go to state 55
    STATEMENT_NEW   go to state 56
    VALUE           go to state 57
    OPERATION       go to state 58
    ADDITION        go to state 59
    MULTIPLICATION  go to state 60
    SUBTRACTION     go to state 61
    DIVISION        go to state 62


State 44

   34 STATEMENT_DO_WHILE: TOKEN_DO TOKEN_LBRACE • STATEMENTS TOKEN_RBRACE TOKEN_WHILE TOKEN_LPAREN CONDITION TOKEN_RPAREN

    TOKEN_IF                      shift, and go to state 3
    TOKEN_WHILE                   shift, and go to state 4
    TOKEN_DO                      shift, and go to state 5
    TOKEN_FOR                     shift, and go to state 6
    TOKEN_SWITCH                  shift, and go to state 7
    TOKEN_BREAK                   shift, and go to state 8
    TOKEN_RETURN                  shift, and go to state 9
    TOKEN_PUBLIC                  shift, and go to state 10
    TOKEN_PRIVATE                 shift, and go to state 11
    TOKEN_INT                     shift, and go to state 12
    TOKEN_CHAR                    shift, and go to state 13
    TOKEN_DOUBLE                  shift, and go to state 14
    TOKEN_BOOLEAN                 shift, and go to state 15
    TOKEN_STRING                  shift, and go to state 16
    TOKEN_OUT_PRINT               shift, and go to state 17
    TOKEN_ONE_LINE_COMMENT        shift, and go to state 18
    TOKEN_MULTIPLE_LINE_COMMENTS  shift, and go to state 19
    IDENTIFIER                    shift, and go to state 20
    CLASS_IDENTIFIER              shift, and go to state 21

    $default  reduce using rule 2 (STATEMENTS)
